new changes to the payment page

--- a/paymentPage.html
+++ b/paymentPage.html
@@ -49,9 +49,9 @@
                                 <div class="profileAvatar">
                                     <div class="profilePic"></div>
                                     <div class="profileActions">
-                                        <a href="#" class="profile-btn edit-btn">
-                                            <i class="ri-pencil-fill"></i>
-                                            <span>Edit Profile</span>
+                                        <a href="landingPage.html" class="profile-btn edit-btn">
+                                            <i class="ri-logout-circle-line"></i>
+                                            <span>Log Out</span>
                                         </a>
                                         <a href="#" class="profile-btn password-btn">
                                             <i class="ri-lock-password-fill"></i>
@@ -98,6 +98,15 @@
                                             class="border border-bottom"></span><span class="border border-left"></span>
                                         <i class="ri-bank-line"></i>
                                         <p>Bank Transfer</p>
+                                    </div>
+                                </a>
+                                <a href="savings.html" class="payment-option-btn" id="bankTransferBtn">
+                                    <div class="payment-option-icon po-info">
+                                        <span class="shine"></span><span class="border border-top"></span><span
+                                            class="border border-right"></span><span
+                                            class="border border-bottom"></span><span class="border border-left"></span>
+                                        <i class="ri-wallet-fill"></i>
+                                        <p>Savings Deposit</p>
                                     </div>
                                 </a>
                             </div>
