--- a/savings.html
+++ b/savings.html
@@ -97,7 +97,7 @@
                     <div class="dockbox">
                         <a href="dashboard.html"><i class="ri-home-fill"></i></a>
                         <a href="#"><i class="ri-wallet-fill"></i></a>
-                        <a href="#"><i class="ri-hand-coin-fill"></i></a>
+                        <a href="paymentPage.html"><i class="ri-hand-coin-fill"></i></a>
                         <a href="#"><i class="ri-team-fill"></i></a>
                         <a href="#"><i class="ri-history-fill"></i></a>
                     </div>
