--- a/dashboard.html
+++ b/dashboard.html
@@ -162,7 +162,7 @@
                         <a href="savings.html"><i class="ri-wallet-fill"></i></a>
                         <a href="paymentPage.html"><i class="ri-hand-coin-fill"></i></a>
                         <a href="#"><i class="ri-team-fill"></i></a>
-                        <a href="#"><i class="ri-history-fill"></i></a>
+                        <a href="transactioins.html"><i class="ri-history-fill"></i></a>
                     </div>
                 </div>
             </div>
