--- a/paymentPage.html
+++ b/paymentPage.html
@@ -197,9 +197,9 @@
                     <div class="dockbox">
                         <a href="dashboard.html"><i class="ri-home-fill"></i></a>
                         <a href="savings.html"><i class="ri-wallet-fill"></i></a>
-                        <a href="paymentPage.html"><i class="ri-hand-coin-fill"></i></a>
-                        <a href="#"><i class="ri-team-fill"></i></a>
-                        <a href="#"><i class="ri-history-fill"></i></a>
+                        <a href="#"><i class="ri-hand-coin-fill"></i></a>
+                        <a href="people.html"><i class="ri-team-fill"></i></a>
+                        <a href="transactioins.html"><i class="ri-history-fill"></i></a>
                     </div>
                 </div>
             </div>
