--- a/savings.html
+++ b/savings.html
@@ -98,8 +98,8 @@
                         <a href="dashboard.html"><i class="ri-home-fill"></i></a>
                         <a href="#"><i class="ri-wallet-fill"></i></a>
                         <a href="paymentPage.html"><i class="ri-hand-coin-fill"></i></a>
-                        <a href="#"><i class="ri-team-fill"></i></a>
-                        <a href="#"><i class="ri-history-fill"></i></a>
+                        <a href="people.html"><i class="ri-team-fill"></i></a>
+                        <a href="transactioins.html"><i class="ri-history-fill"></i></a>
                     </div>
                 </div>
             </div>
