--- a/transactioins.html
+++ b/transactioins.html
@@ -89,7 +89,8 @@
                                 <p>Amount</p>
                                 <p class="removeBorder">Status</p>
                             </div>
-                            <div class="transactionData"></div>
+                            <div class="transactionData">
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -98,7 +99,7 @@
                         <a href="dashboard.html"><i class="ri-home-fill"></i></a>
                         <a href="savings.html"><i class="ri-wallet-fill"></i></a>
                         <a href="paymentPage.html"><i class="ri-hand-coin-fill"></i></a>
-                        <a href="#"><i class="ri-team-fill"></i></a>
+                        <a href="people.html"><i class="ri-team-fill"></i></a>
                         <a href="#"><i class="ri-history-fill"></i></a>
                     </div>
                 </div>
@@ -107,7 +108,6 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="transactions.js"></script>
-</body>
+    <script src="transactions.js"></script> </body>
 
 </html>
