added funcitonality of people pay more changes to go

--- a/paymentPage.html
+++ b/paymentPage.html
@@ -81,7 +81,7 @@
                                         <p>Withdraw</p>
                                     </div>
                                 </a>
-                                <a href="#" class="payment-option-btn" id="payFriendBtn">
+                                <a href="people.html" class="payment-option-btn" id="payFriendBtn">
                                     <div class="payment-option-icon po-pay">
                                         <span class="shine"></span><span class="border border-top"></span><span
                                             class="border border-right"></span><span
