some ui changes to the peoples table

--- a/people.html
+++ b/people.html
@@ -50,14 +50,18 @@
                     </div>
 
                     <div class="people-list-container">
+                        
                         <div class="people-list-header">
+                            <p>Name</p>
+                            <p>Phone Number</p>
+                            <p>Bank Account</p>
+                            <p>Relation</p>
+                            <p class="removeBorder">Actions</p>
                         </div>
                         <div class="people-list-body" id="peopleListBody">
-
                             <p class_="no-contacts-message" id="noContactsMessage" style="display: none;">
                                 No contacts found. <br> Add one by clicking the "Add Contact" button!
                             </p>
-
                         </div>
                     </div>
                 </div>
@@ -107,7 +111,7 @@
     <div class="dock">
         <div class="dockbox">
             <a href="dashboard.html"><i class="ri-home-fill"></i></a>
-            <a href="#"><i class="ri-wallet-fill"></i></a>
+            <a href="savings.html"><i class="ri-wallet-fill"></i></a>
             <a href="paymentPage.html"><i class="ri-hand-coin-fill"></i></a>
             <a href="people.html"><i class="ri-team-fill"></i></a>
             <a href="transactioins.html"><i class="ri-history-fill"></i></a>
