a few final changes to the ui

--- a/forgotPass.html
+++ b/forgotPass.html
@@ -25,8 +25,8 @@
                             <p class="error-message"></p>
                         </div>
                         <a href="#" class="forgotPassSubmitBtn disabled">Check</a>
-                        <p>If phoneNumber is registered we will send your passoword to the WhattsApp</p>
-                        <p>Go back to Log In Page <a href="login.html">Log In</a></p>
+                        <p>A temporary password will be sent to the registered phone number</p>
+                        <p>Go back to Log In Page <a class="alternate" href="login.html">Log In</a></p>
                     </div>
                 </div>
             </div>
