--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
                 <div class="left">
                     <h1>Log In</h1>
                     <p>or</p>
-                    <p>Don't have a account? Create one <a href="signup.html">Sign Up</a></p>
+                    <p>Don't have a account? Create one <a class="alternate" href="signup.html">Sign Up</a></p>
                 </div>
                 <div class="right">
                     <div class="form_box">
@@ -36,7 +36,7 @@
                             <p class="error-message">Enter your preset password</p>
                         </div>
                         <a href="#" class="logInSubmitBtn disabled">Log In</a>
-                        <p>Forgot Password? <a href="forgotPass.html">Click here</a></p>
+                        <p>Forgot Password? <a class="alternate" href="forgotPass.html">Click here</a></p>
                     </div>
                 </div>
             </div>
