--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
                 <div class="left">
                     <h1>Sign Up</h1>
                     <p>or</p>
-                    <p>Already have an account? <a href="login.html">Log In</a></p>
+                    <p>Already have an account? <a class="alternate" href="login.html">Log In</a></p>
                 </div>
                 <div class="right">
                     <div class="form_box">
